Use dynamic viewport units to fix display clipping on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,6 @@
 body {
   -webkit-font-smoothing: antialiased;
   overflow: hidden;
-  width: 100vw;
-  height: 100vh;
+  width: 100dvw;
+  height: 100dvh;
 }
